--- a/mobile.html
+++ b/mobile.html
@@ -30,7 +30,7 @@
 
 <script src="https://malsup.github.com/jquery.cycle2.js"></script>
 
-<script src="http://malsup.github.com/jquery.cycle2.carousel.js"></script>
+<script src="https://malsup.github.com/jquery.cycle2.carousel.js"></script>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
