--- a/mobile.html
+++ b/mobile.html
@@ -28,9 +28,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
 
-<script src="https://malsup.github.com/jquery.cycle2.js"></script>
+<script src="jquery.cycle2.js"></script>
 
-<script src="https://malsup.github.com/jquery.cycle2.carousel.js"></script>
+<script src="jquery.cycle2.carousel.js"></script>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
