--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
     </div>
     </div>
 
+    <div>
+      <p class="copyright"> Self-Designed and Developed © Yinjian Huang 2019 </p>
+
 </div>
 
 
