--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
   <div class="container">
 
 <h2> Photographer </h2>
+<p class="producer"> I love taking photos when I travel (click to see larger pictures).</p>
 
  <div id="photos">
    <ul id="photo-gallery">
@@ -116,12 +117,16 @@
 
 
 <h2> Video Producer </h2>
+<p class="producer"> Produced and directed 20+ videos. Below is a documentary film of Professor Rhoda in St. Mary's College of Maryland, produced in 2017.</p>
 <center><iframe class="youtube-video" width="830" height="470" src="https://www.youtube.com/embed/puh7XKhIOd4"
 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 <h2> Traveler</h2>
+<p class="producer"> Visited more than 20 countries and districts (see my footprints on the map). <p>
+
+
 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1zH5u_C92vbhtQZXSYRgGrgAc27guFRo5" width="830" height="630"></iframe>
 
 </center>
