--- a/index.html
+++ b/index.html
@@ -101,14 +101,20 @@
     </div>
 
     <div class="box4">
-      <!-- <h3>Web Game Design</h3> -->
+      <div class="intro4">
+            <p class="description"> Web Game Design (p5.js)
+        </p>
+        <p class="description2">
+          <p id="skill" >
+          Coming soon </p>
+
       </div>
 
     </div>
     </div>
 
     <!-- <div>
-      <p id="copyright"> <center>Self-Designed and Developed © Yinjian Huang 2019 </center></p>
+      <p class="copyright"> <center>Self-Designed and Developed © Yinjian Huang 2019 </center></p>
     </div> -->
 </div>
 
