--- a/about.html
+++ b/about.html
@@ -132,6 +132,17 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 </center>
 
 
+<div class="choice">
+<center>
+<a class="bottom" href="index.html">All</a>
+<a class="bottom" href="mobile.html">iPad App</a>
+<a class="bottom" href="museum.html">Mobile App</a>
+<a class="bottom" href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
+
+</center>
+</div>
+
+
 </div>
 
  </div>
