--- a/mobile.html
+++ b/mobile.html
@@ -139,15 +139,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="jessica3.png" alt="Los Angeles" style="width:8100%;">
+        <img src="jessica3.png"  style="width:80%;">
       </div>
 
       <div class="item">
-        <img src="Ben2.png" alt="Chicago" style="width:100%;">
+        <img src="Ben2.png"  style="width:80%;">
       </div>
 
       <div class="item">
-        <img src="Susan4.png" alt="New york" style="width:100%;">
+        <img src="Susan4.png"  style="width:80%;">
       </div>
     </div>
 
@@ -225,22 +225,25 @@ src="https://www.youtube.com/embed/asFa5wLkW5M "
 frameborder="0" allowfullscreen></iframe>
 </center>
 
-     <h3> Test Report </h3>
+    <div> <h3> Test Report </h3>
 
 <p> For the written evaluation, we surveyed 16 people from various background as can be seen in the table above. Overall, our evaluation result is acceptable considering the time and the limitation of the prototype. People enjoyed the concept of our app and our biggest feedback was the visual design of the app. Feedback included comments such as having things pop out more for easier navigation, provide clearer objectives of the app at the beginning of the app. Some of the feedback referenced things we were already aware of in this beta version such as the development tool and setting bar not working. Some feedback we received were due to constraints of the prototype such as the drawing section being unavailable.
 </p> <br>
 
 <p > <b>Respondents’ Profession </b> <br> </p>
-   <p class="profession">Organization Development Specialist<br>
-   Learning & Development Executive<br>
-  Senior Organization Development Analyst<br>
-   Senior Learning & Development Coordinator<br>
-  Data Analyst and Digital Trainee<br>
-  Undergrad Student<br>
-  </p>
+   <p class="profession">Organization Development Specialist
+    <ul>
+   <li>Learning & Development Executive</li>
+<li>  Senior Organization Development Analyst</li>
+  <li> Senior Learning & Development Coordinator</li>
+  <li>Data Analyst and Digital Trainee</li>
+  <li>Undergrad Student</li>
+</p> </div>
 
 
+<div class="report">
 <p class="graph"><b>Report Graphs  </b></p>
+
 
 <center> <div id=adv-custom-pager class="center"></div> </center>
      <div id="box2">
@@ -258,16 +261,22 @@ frameborder="0" allowfullscreen></iframe>
       <img id="report" src="report3.jpeg">
       <img id="report" src="report4.jpeg">
 </div>
-<!-- empty element for pager links -->
+</div>
+</div>
 
 
-     </div>
-   <div id="box3">
+
+
+
+
+   <div class="future">
      <h3> Future</h3>
 
 <p> For future iterations, we would improve our app by including the feedback that we received from our survey. Firstly, we would make the visual design of our app more cohesive. Although our first impression is a roadmap with trees, the rest of our app consists of puzzle pieces. We would pick something that is a cohesive design that better ties into the idea of “instructional design”. Secondly, we would work to expand the community and collaborative aspect of the app. To do this, we could go in two different routes. The first route is to improve on our current version of the community page and make it easily accessible within the app. The second route is to make the community page its own app. By taking the community page and making it its own app, we can then have one app that focuses on the learning aspect of instructional design and the second app focuses on the social aspect where users can share their work.
 </p><br>
 </div>
+
+
 
 <div class="choice">
 <center>
@@ -277,6 +286,7 @@ frameborder="0" allowfullscreen></iframe>
 <a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
 
 </center>
+</div>
 </div>
 
 </div>
