--- a/museum.html
+++ b/museum.html
@@ -61,23 +61,40 @@
 
 <div class="container">
 
+  <h3> My Role </h3>
+  <ul>
+    <li> Conducted Market Research Analysis </li>
+    <li> Developed storyboard </li>
+    <li> Prototyped in Figma </li>
+    <li> Developed implementation plan</li>
+  </ul>
+
+  <h3> My Team </h3>
+  <p> Project partners from Teachers College, Columbia University </p>
+
+
+
 
 
 <div>
 <h2> Analysis </h2>
   <h3>Problem </h3>
-<p> Every classroom is unique - in the types of students in the class, the lesson that they’re learning, and in what they’re interested in learning more about. When going to the museum, each trip should be catered to support and contextualize exactly what that class is learning at that moment in time. More often than not, <b>however, trips to the museum are not facilitated in a way that provides students a bridge to formal learning.</b> These trips are either guided tours by a museum educator, or unstructured time for students to explore the exhibits on their own. This results in students having fun in an environment that breaks up the monotony of sitting in class every day, but does not actually allow them to deeply relate what they’re learning in the museum to the concepts being covered in class. <br>
-Given the amount of time and effort that it would take for a museum educator to work with teachers in customizing the experience for each class, <b>it is unreasonable to expect that museum educators would be able to develop individualized lessons for each class visiting the museum.</b> The lack of resources allocated to connecting these two parties makes it difficult to create a learning experience that truly contextualizes the museum experience in terms of the work being done in the classroom.
+<p>  When going to the museum, each trip should be catered to support and contextualize exactly what that class is learning at that moment in time. More often than not, <b>however, trips to the museum are not facilitated in a way that provides students a bridge to formal learning.</b>
+Given the amount of time and effort that it would take for a museum educator to work with teachers in customizing the experience for each class, it is unreasonable to expect that museum educators would be able to develop individualized lessons for each class visiting the museum.<b>The lack of resources allocated to connecting museum educators and teachers makes it difficult to create a learning experience that truly contextualizes the museum experience in terms of the work being done in the classroom.</b>
 </p>
 </div><br>
 
+<div>
 <h3> Target Audience </h3>
 <div id="box1">
 
 <img id="teachers" src="teacher.jpeg">
 <p> <b>The target audience for this project are teachers grades from 6th to 8th grade.</b> While other users can fall outside of this grade range, we have decided to focus on this demographic where students are still gaining foundational knowledge; whereas pre-6th grade students are still learning basic human skills (reading and writing), and post-8th grade students are learning in-depth concepts. </p>
 
-</div><br>
+</div>
+<img class="teachers hide" src="teacher.jpeg">
+<p class="audience hide"> <b>The target audience for this project are teachers grades from 6th to 8th grade.</b>
+</div>
 
 
   <h3> Goal of App </h3>
