--- a/museum.html
+++ b/museum.html
@@ -100,7 +100,7 @@ Given the amount of time and effort that it would take for a museum educator to 
   <h3> Goal of App </h3>
   <p> <b>The project aims to address the disconnect between formal classroom learning and informal learning that occurs during museum field trips. </b>The goal is to provide a resource that allows them to easily contextualize museum artifacts in terms of what is being covered in the classroom at that time.<br>
 
-<strong>Objectives</strong><br>
+<strong>Learning Objectives</strong><br>
 1. Learners will be able to create meaningful museum learning experiences. <br>
 2. Learners will be able to use an app to facilitate the process of developing a museum lesson that contextualizes in-class material. <br>
 3. Learners will transition from decontextualized museum tour field trips to app-based customized museum learning for their students. <br>
@@ -108,14 +108,13 @@ Given the amount of time and effort that it would take for a museum educator to 
 </p>
 
   <h3> Review of competing projects </h3>
-  <p> Most museum apps include information about all exhibits, very broadly, and do not provide teachers the opportunity to select specific exhibits to focus on and situate these within the context of their curriculum at large. There are also apps that allow users to create their own tours, but they are lacking in that they do not provide students with the opportunity to engage with the exhibits beyond reading about them, and they do not provide space for discussion of the exhibits. For example, the Artlens app allows users to create their tour in the museum and discover what exhibits are nearby. <br>
-Additionally, some apps provide access to experts during a museum visit. The ask BKM app allows users to ask whatever questions during their visit to the museum, and educators and historians will give answers immediately. However, this feature does not provide much in the way of contextualizing the exhibits, beyond giving students access to a resource for answering questions that they are curious about.
-</p>
+  <img class="market"src="market3.jpeg" width=768px height=450px>
+
 
 <h3> Learning Theory </h3>
 <img id="theory" src="theory2.jpeg">
-<p>Our approach to designing this app draws primarily on information seeking behavior theories. In information seeking, learners have decided to gather information about a given topic, as a response to the identification of a need for said information. It is an active search for information to be able to answer a given question or set of questions.
-Wilson (2006) discusses his 2002 model of information seeking as the “idea of a problem solving process to which recurrent searches for information are connected as information problems are experienced in the process of solving the more general research problem” (p. 28) He puts forward the below model, which demonstrates the progression from problem identification to solution statement, facilitated by the resolution of uncertainty through information seeking. Our idea is that teachers identify that students are unable to connect museum field trips and formal learning as a problem, they will seek information about the exhibits through our app, and will resolve this through the creation of museum scavenger hunts.
+<p><b>Our approach to designing this app draws primarily on information seeking behavior theories. </b>In information seeking, learners have decided to gather information about a given topic, as a response to the identification of a need for said information. It is an active search for information to be able to answer a given question or set of questions.
+Wilson (2006) discusses his 2002 model of information seeking as the “idea of a problem solving process to which recurrent searches for information are connected as information problems are experienced in the process of solving the more general research problem” (p. 28). <b>Our idea is that teachers identify that students are unable to connect museum field trips and formal learning as a problem, they will seek information about the exhibits through our app, and will resolve this through the creation of museum scavenger hunts.</b>
 </p>
 
   <center>
@@ -130,6 +129,14 @@ Wilson (2006) discusses his 2002 model of information seeking as the “idea of 
 
   <h3> Prototype </h3>
 
+<p> For teachers, they can use the app to create customized scavenger hunt in the museums that fit their learning goals, incorporating engaging activities and interactive discussions. </p>
+  <img class="prototype1" src="teachers.jpeg">
+
+  <p> For students, they can use the app to explore the museums by the scavenger hunt created by their teachers and see the exploration of other users.</p>
+
+    <img class="prototype1" width=740px src="students.jpeg">
+
+<p> Click to explore the interactive prototype </p>
 <iframe style="border: none;" width="800" height="450"
 
 src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FdDJYJCxnrEmm7g5uAkoV2p%2FMuseum-Hunt-Prototype%3Fnode-id%3D55%253A97%26scaling%3Dscale-down" allowfullscreen></iframe>
@@ -182,9 +189,9 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
 
 
     <h3> Evaluation </h3>
-    <p>The evaluation will be structured based on three parts, <b>teachers' experience, students' experience, and delivery platform (for developer use).</b><br>
-      For the instructor, the app has its built-in function to collect data to support the learning environment better. The Exhibition Review page can help the instructor with ratings, review highlights, and reviews of the existing hunt route. Whether they chose to create their unique scavenger route or simply follow a success example, these will all be helpful information for the next user.<br>
-      For the students, a page full of collections they found in the museum will be a rewarding experience after the hunt, just like an honor wall, this is also the learning material that helps them review what they have learned in the hunt. The number of collection they have, how many times a student click a collection, what is a students' preference when choosing a scavenger hunt can also help an instructor when organizing a hunt.<br>
+    <p>The evaluation will be structured based on three parts, <b>teachers' experience, students' experience, and delivery platform (for developer use).</b><br></p>
+      <p class="evaluation">For the instructor, the app has its built-in function to collect data to support the learning environment better. The Exhibition Review page can help the instructor with ratings, review highlights, and reviews of the existing hunt route. Whether they chose to create their unique scavenger route or simply follow a success example, these will all be helpful information for the next user.<br>
+      For the students, a page full of collections they found in the museum will be a rewarding experience after the hunt, just like an honor wall, this is also the learning material that helps them review what they have learned in the hunt. The number of collection they have, how many times a student click a collection, what is a students' preference when choosing a scavenger hunt can also help an instructor when organizing a hunt.<br></p>
 
 </p>
 
