--- a/about.html
+++ b/about.html
@@ -115,13 +115,14 @@
 
  </div>
 
-
-<h2> Video Producer </h2>
+<div>
+<h2> Director </h2>
 <p class="producer"> Produced and directed 20+ videos. Below is a documentary film of Professor Rhoda in St. Mary's College of Maryland, produced in 2017.</p>
 <center><iframe class="youtube-video" width="830" height="470" src="https://www.youtube.com/embed/AFu0WK_OTyg"
 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+</div>
 
 <h2> Traveler</h2>
 <p class="producer"> Visited more than 20 countries and districts (see my footprints on the map). <p>
