--- a/museum.html
+++ b/museum.html
@@ -108,11 +108,11 @@ Given the amount of time and effort that it would take for a museum educator to 
 </p>
 
   <h3> Review of competing projects </h3>
-  <img class="market"src="market3.jpeg" width=768px height=450px>
+  <img class="market"src="market3.jpeg" width=950px height=550px>
 
 
 <h3> Learning Theory </h3>
-<img id="theory" src="theory2.jpeg">
+<center><img id="theory" src="theory2.jpeg" width=800px height=300px></center>
 <p><b>Our approach to designing this app draws primarily on information seeking behavior theories. </b>In information seeking, learners have decided to gather information about a given topic, as a response to the identification of a need for said information. It is an active search for information to be able to answer a given question or set of questions.
 Wilson (2006) discusses his 2002 model of information seeking as the “idea of a problem solving process to which recurrent searches for information are connected as information problems are experienced in the process of solving the more general research problem” (p. 28). <b>Our idea is that teachers identify that students are unable to connect museum field trips and formal learning as a problem, they will seek information about the exhibits through our app, and will resolve this through the creation of museum scavenger hunts.</b>
 </p>
@@ -130,18 +130,14 @@ Wilson (2006) discusses his 2002 model of information seeking as the “idea of 
   <h3> Prototype </h3>
 
 <p> For teachers, they can use the app to create customized scavenger hunt in the museums that fit their learning goals, incorporating engaging activities and interactive discussions. </p>
-  <img class="prototype1" src="teachers.jpeg">
+  <img class="prototype1" src="teachers2.jpeg" width="900" >
 
   <p> For students, they can use the app to explore the museums by the scavenger hunt created by their teachers and see the exploration of other users.</p>
 
-    <img class="prototype1" width=740px src="students.jpeg">
+    <img class="prototype1" width=900px src="students2.jpeg">
 
 <p> Click to explore the interactive prototype </p>
-<iframe style="border: none;" width="800" height="450"
-
-src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FdDJYJCxnrEmm7g5uAkoV2p%2FMuseum-Hunt-Prototype%3Fnode-id%3D55%253A97%26scaling%3Dscale-down" allowfullscreen></iframe>
-
-
+<iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FiUv86Seat67v6gIThi5PZd%2FMuseum-Hunt-Prototype%3Fscaling%3Dscale-down%26node-id%3D53%253A223" allowfullscreen></iframe>
 
     <h3> Implementation </h3>
 
