--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.google.com/specimen/Poppins" rel="stylesheet">
+  <link href="https://fonts.google.com/specimen/Courgette" rel="stylesheet">
   <title>Main</title>
 
   <link rel="stylesheet" href="custom.css">
@@ -39,7 +40,7 @@
 <div class="projects">
   <p class="heading2">
 
-    A passionate UX & UI Designer, Instructional Designer and Web Developer </p>
+    A UX & UI Professional, Instructional Designer and Web Developer </p>
 
 
 
