--- a/mobile.html
+++ b/mobile.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.google.com/specimen/Muli" rel="stylesheet">
     <link href="https://fonts.google.com/specimen/Open+Sans" rel="stylesheet">
     <link href="https://fonts.google.com/specimen/Arvo" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Courgette" rel="stylesheet">
 
 
 
@@ -177,10 +178,52 @@
 
 <div>
   <h3> Goal of App </h3>
-  <p> Due to the rapid growth of the eLearning industry and the various ways that people enter the field of e-Learning, there are inconsistencies in their knowledge of the process of creating e-Learning courses in general. Many people with different backgrounds find their way into the space of e-Learning: Some people are new to the field such as new graduates of instructional design programs; some people are experts in the field who have transitioned into a position of developing e-Learning course; and other fields such as Learning and Development and Human Resources that are in charge of orientation and onboarding are moving into the field of e-Learning to train their new recruits.  The Agogos iPad app will help all of these nascent eLearning professionals learn these procedures of creating an e-Learning course.
-  </p>
+  <p> Provide support to eLearning creators </p>
+  <ul class="timeline">
 
-</div>
+  	<!-- Item 1 -->
+  	<li>
+  		<div class="direction-r">
+  			<div class="flag-wrapper">
+  				<span class="flag"> Checklist</span>
+  				<span class="time-wrapper"><span class="time">Phase 1</span></span>
+  			</div>
+  			<div class="desc">Learn the definitions of important words and how they are used in eLearning</div>
+  		</div>
+  	</li>
+
+  	<!-- Item 2 -->
+  	<li>
+  		<div class="direction-l">
+  			<div class="flag-wrapper">
+  				<span class="flag">Case Studies</span>
+  				<span class="time-wrapper"><span class="time">Phase 2</span></span>
+  			</div>
+  			<div class="desc">
+          a.	Create your problem scenario and problem statement<br>
+          b.	Create your design document<br>
+          c.  Draw storyboard and prototype<br>
+          d.  Optional: Share with community </div>
+  		</div>
+  	</li>
+
+  	<!-- Item 3 -->
+  	<li>
+  		<div class="direction-r">
+  			<div class="flag-wrapper">
+  				<span class="flag">Community page</span>
+  				<span class="time-wrapper"><span class="time">Phase 3</span></span>
+  			</div>
+  			<div class="desc">Upload your work and share to community page</div>
+  </div>
+  		</div>
+  	</li>
+
+
+  </ul>
+
+
+
 
   <center>
 
