--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <p class="description2">
                   <p id="skill" >
                   Featured skills </p>
-                  Develop personas and wireframes<br>
-                  Prototype in Figma  </p>
+                  Developing personas and wireframes<br>
+                  Prototyping in Figma  </p>
               </div>
             </a>
           </div>
@@ -71,9 +71,9 @@
             <p class="description2">
               <p id="skill" >
               Featured skills </p>
-              Marketing competitive analysis<br>
-              Develop storyboard and wireframes<br>
-              Prototype in Figma
+              Performing market competitor analysis<br>
+              Developing storyboard and wireframes<br>
+              Prototyping in Figma
             </p>
           </a>
           </div>
@@ -92,9 +92,9 @@
         <p class="description2">
           <p id="skill" >
           Featured skills </p>
-          Develop dialogue plan<br>
-          Develop non-discursive activity<br>
-          Facilitate meaningful encounters between viewers and artworks
+          Developing dialogue plan<br>
+          Developing non-discursive activity<br>
+          Facilitating meaningful encounters between viewers and artworks
         </p>
       </a>
 
