--- a/mobile.html
+++ b/mobile.html
@@ -270,7 +270,7 @@ frameborder="0" allowfullscreen></iframe>
 
     <div> <h3> Test Report </h3>
 
-<p> For the written evaluation, we surveyed 16 people from various background as can be seen in the table above. Overall, our evaluation result is acceptable considering the time and the limitation of the prototype. People enjoyed the concept of our app and our biggest feedback was the visual design of the app. Feedback included comments such as having things pop out more for easier navigation, provide clearer objectives of the app at the beginning of the app. Some of the feedback referenced things we were already aware of in this beta version such as the development tool and setting bar not working. Some feedback we received were due to constraints of the prototype such as the drawing section being unavailable.
+<p> <b>For the written evaluation, we surveyed 16 people from various background as can be seen in the table above.</b> Overall, our evaluation result is acceptable considering the time and the limitation of the prototype. People enjoyed the concept of our app and our biggest feedback was the visual design of the app. Feedback included comments such as having things pop out more for easier navigation, provide clearer objectives of the app at the beginning of the app. Some of the feedback referenced things we were already aware of in this beta version such as the development tool and setting bar not working. Some feedback we received were due to constraints of the prototype such as the drawing section being unavailable.
 </p> <br>
 
 <p > <b>Respondents’ Profession </b> <br> </p>
