--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="mobile.html">
               <div class="intro">
                 <p class="description">
-                  Empower New Instructional Designer </p>
+                  Empowering New Instructional Designer </p>
                 <p class="description2">
                   <p id="skill" >
                   Featured skills </p>
