--- a/mobile.html
+++ b/mobile.html
@@ -102,7 +102,7 @@
 </ul>
 
 <h3> My Team </h3>
-<p> Project partners from Teachers College, Columbia University </p>
+<p> With three project partners from Teachers College, Columbia University </p>
 
 
 <div>
