--- a/museum.html
+++ b/museum.html
@@ -70,7 +70,7 @@
   </ul>
 
   <h3> My Team </h3>
-  <p> Project partners from Teachers College, Columbia University </p>
+  <p> With three project partners from Teachers College, Columbia University </p>
 
 
 
