--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
         <div class="container1">
               <div class="box1">
 
-              <!-- <img src="./agogos-1.jpg" alt=""> -->
-              <!-- <h3>Mobile Learning</h3> -->
-            <a href="mobile.html">
+
+            <a href="Portfolio.pdf">
               <div class="intro">
                 <p class="description">
-                  Empowering New Instructional Designer </p>
+                  Stimulating School-based Mentorship </p>
                 <p class="description2">
                   <p id="skill" >
                   Featured skills </p>
-                  Developing personas and wireframes<br>
-                  Prototyping in Figma  </p>
+                  User interviews and personas<br>
+                  Needs anaysis<br>
+                  Low-fidelity and high-fidelity mock-ups<br>
+                  User testing and iterations<br>
+                   </p>
               </div>
             </a>
           </div>
@@ -71,9 +73,9 @@
             <p class="description2">
               <p id="skill" >
               Featured skills </p>
-              Performing market competitor analysis<br>
-              Developing storyboard and wireframes<br>
-              Prototyping in Figma
+              Market competitor analysis<br>
+              Storyboard and wireframes<br>
+              Prototypes(Figma)
             </p>
           </a>
           </div>
@@ -85,29 +87,39 @@
 
   <div class="container2">
     <div class="box3">
-      <a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">
       <div class="intro3">
-            <p class="description"> Teaching in Art Museums
-        </p>
+      <a href="mobile.html">
+        <p class="description">
+          Empowering New Instructional Designer </p>
         <p class="description2">
           <p id="skill" >
           Featured skills </p>
-          Developing dialogue plan<br>
-          Developing non-discursive activity<br>
-          Facilitating meaningful encounters between viewers and artworks
-        </p>
+          User iterviews and personas<br>
+          Wireframes and prototypes(Figma)  <br>
+          Usibility testing and evaluation
+          </p>
+
+
       </a>
+
 
       </div>
     </div>
 
     <div class="box4">
       <div class="intro4">
-            <p class="description"> Web Game Design (p5.js)
-        </p>
-        <p class="description2">
-          <p id="skill" >
-          Coming soon </p>
+
+        <p class="description"> AR Pets that Reducing Elders' Loneliness <br>
+          (coming soon)
+    </p>
+    <p class="description2">
+      <p id="skill" >
+      Featured skills </p>
+      Needs analysis<br>
+      Gamification<br>
+      3D Prototypes<br>
+
+    </p>
 
       </div>
 
