--- a/mobile.html
+++ b/mobile.html
@@ -323,10 +323,11 @@ frameborder="0" allowfullscreen></iframe>
 
 <div class="choice">
 <center>
-<a href="index.html">All</a>
-<a href="mobile.html">iPad App</a>
+<a href="index.html"> All </a>
+<a href="Portfolio.pdf">Google UX Challenge</a>
 <a href="museum.html">Mobile App</a>
-<a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
+<a href="mobile.html">iPad App</a>
+
 
 </center>
 </div>
