--- a/about.html
+++ b/about.html
@@ -112,11 +112,13 @@
        </a
      </li>
    </ul><br>
+   <p></p><br>
+   <p></p><br>
 
  </div>
 
 <div>
-<h2> Director </h2>
+<h2 class="director"> Director </h2>
 <p class="producer"> Produced and directed 20+ videos. Below is a documentary film of Professor Rhoda in St. Mary's College of Maryland, produced in 2017.</p>
 <center><iframe class="youtube-video" width="830" height="470" src="https://www.youtube.com/embed/AFu0WK_OTyg"
 
@@ -132,16 +134,15 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 
 </center>
 
-
+<!--
 <div class="choice">
 <center>
-<a class="bottom" href="index.html">All</a>
-<a class="bottom" href="mobile.html">iPad App</a>
-<a class="bottom" href="museum.html">Mobile App</a>
-<a class="bottom" href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
-
+  <a href="index.html"> All </a>
+  <a href="Portfolio.pdf">Google UX Challenge</a>
+  <a href="museum.html">Mobile App</a>
+  <a href="mobile.html">iPad App</a>
 </center>
-</div>
+</div> -->
 
 
 </div>
