--- a/museum.html
+++ b/museum.html
@@ -198,11 +198,10 @@ Wilson (2006) discusses his 2002 model of information seeking as the “idea of 
 
 <div class="choice">
 <center>
-<a href="index.html">All</a>
-<a href="mobile.html">iPad App</a>
-<a href="museum.html">Mobile App</a>
-<a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
-
+  <a href="index.html"> All </a>
+  <a href="Portfolio.pdf">Google UX Challenge</a>
+  <a href="museum.html">Mobile App</a>
+  <a href="mobile.html">iPad App</a>
 </center>
 </div>
 
