--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="box1">
 
 
-            <a href="Portfolio.pdf">
+            <a href="GoogleDesignChallenge.pdf">
               <div class="intro">
                 <p class="description">
                   Stimulating School-based Mentorship </p>
