--- a/mobile.html
+++ b/mobile.html
@@ -45,7 +45,7 @@
 
 
 
-<nav>
+<!-- <nav>
   <div class="logo">
       <h4> <a href="index.html"> Yinjian Huang </a> </h4>
     </div>
@@ -66,7 +66,7 @@
 
 
 
-</nav>
+</nav> -->
 
 
   <div class="projects">
@@ -321,7 +321,7 @@ frameborder="0" allowfullscreen></iframe>
 
 
 
-<div class="choice">
+<!-- <div class="choice">
 <center>
 <a href="index.html"> All </a>
 <a href="Portfolio.pdf">Google UX Challenge</a>
@@ -330,7 +330,7 @@ frameborder="0" allowfullscreen></iframe>
 
 
 </center>
-</div>
+</div> -->
 </div>
 
 </div>
