--- a/museum.html
+++ b/museum.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<nav>
+<!-- <nav>
   <div class="logo">
       <h4> <a href="index.html"> Yinjian Huang </a></h4>
     </div>
@@ -43,7 +43,7 @@
   <div class="line3"></div>
 </div>
 
-</nav>
+</nav> -->
 
   <div class="projects">
 <div class="all">
@@ -196,14 +196,14 @@ Wilson (2006) discusses his 2002 model of information seeking as the “idea of 
 </center>
 
 
-<div class="choice">
+<!-- <div class="choice">
 <center>
   <a href="index.html"> All </a>
   <a href="Portfolio.pdf">Google UX Challenge</a>
   <a href="museum.html">Mobile App</a>
   <a href="mobile.html">iPad App</a>
 </center>
-</div>
+</div> -->
 
 </div>
 
