--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="box4">
       <div class="intro4">
-
+      <a href="mobile2.html">
         <p class="description"> AR Pets that Reducing Elders' Loneliness <br>
           (coming soon)
     </p>
